--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "0.26.1",
-    "bootstrap": "5.1.3",
+    "bootstrap": "^5.3.3",
     "react": "^19.0.0",
-    "react-bootstrap": "2.2.2",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "sass": "1.49.10",
     "web-vitals": "^2.1.4"
   },
